--- a/frontend/pages/stations.html
+++ b/frontend/pages/stations.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Petrol Stations with 360 Street View</title>
+  <!-- <script type="text/javascript">
+
+    setInterval(function(){
+
+      if(!localStorage.getItem('token')){
+        window.location.href = 'login.html';
+      }
+      console.log("Timer Ticked!")
+    }, 5000)
+  </script> -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBB5PKwLpSTwkzJhxwdxfv885mAQ3BZYfI&callback=initMap" async defer></script>
   <style>
     /* Reset some default styles */
