--- a/frontend/pages/stations.html
+++ b/frontend/pages/stations.html
@@ -1,178 +1,338 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Petrol Stations with 360 Street View</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBB5PKwLpSTwkzJhxwdxfv885mAQ3BZYfI&callback=initMap" async defer></script>
-  <style>
-    /* Reset some default styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Petrol Stations with 360 Street View</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBB5PKwLpSTwkzJhxwdxfv885mAQ3BZYfI&libraries=geometry,places&callback=initMap" async defer></script>
+    <style>
+        /* Reset some default styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      color: #333;
-      padding-top: 70px; /* Adjusted for navbar height */
-    }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            color: #333;
+            padding-top: 70px; /* Adjusted for navbar height */
+        }
 
-    /* Navbar styles */
-    .navbar {
-      background-color: #007bff;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 1000;
-      padding: 10px 0;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
+        /* Navbar styles */
+        .navbar {
+            background-color: #007bff;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000;
+            padding: 10px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
 
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
-    .navbar .container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+        .navbar .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
 
-    .logo {
-      color: #fff;
-      font-size: 24px;
-    }
+        .logo {
+            color: #fff;
+            font-size: 24px;
+        }
 
-    .nav-links {
-      display: flex;
-    }
+        .nav-links {
+            display: flex;
+        }
 
-    .nav-link {
-      color: #fff;
-      text-decoration: none;
-      padding: 8px 15px;
-      margin-left: 10px;
-      border-radius: 3px;
-      transition: background-color 0.3s ease;
-    }
+        .nav-link {
+            color: #fff;
+            text-decoration: none;
+            padding: 8px 15px;
+            margin-left: 10px;
+            border-radius: 3px;
+            transition: background-color 0.3s ease;
+        }
 
-    .nav-link:hover {
-      background-color: #0056b3;
-    }
+        .nav-link:hover {
+            background-color: #0056b3;
+        }
 
-    /* Style for the map container */
-    #map {
-      height: 400px;
-      width: 100%;
-      margin-top: 20px;
-      border-radius: 5px;
-      overflow: hidden;
-    }
+        /* Style for the map container */
+        #map {
+            height: 400px;
+            width: 100%;
+            margin-top: 20px;
+            border-radius: 5px;
+            overflow: hidden;
+        }
 
-    /* Style for the list of petrol stations */
-    .station-list {
-      margin-top: 20px;
-    }
+        /* Style for the list of petrol stations */
+        .station-list {
+            margin-top: 20px;
+        }
 
-    .station {
-      border: 1px solid #007bff;
-      background-color: #fff;
-      color: #333;
-      padding: 15px;
-      margin-bottom: 15px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
+        .station {
+            border: 1px solid #007bff;
+            background-color: #fff;
+            color: #333;
+            padding: 15px;
+            margin-bottom: 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: transform 0.2s ease;
+        }
 
-    .station:hover {
-      background-color: #f0f0f0;
-      transform: translateY(-5px);
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-  </style>
+        .station:hover {
+            background-color: #f0f0f0;
+            transform: translateY(-5px);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
-  <nav class="navbar">
+    <nav class="navbar">
+        <div class="container">
+            <h1 class="logo"><a href="../Home.html" style="color: white; text-decoration: none;">POA</a></h1>
+            <div class="nav-links">
+                <!-- Replace "#" with actual logout action if needed -->
+                <a href="#" id="logoutButton" class="nav-link" style="display: none;">Logout</a>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
-      <h1 class="logo"><a href="../Home.html" style="color: white; text-decoration: none;">POA</a></h1>
-      <div class="nav-links">
-        <!-- Replace "#" with actual logout action if needed -->
-        <a href="#" id="logoutButton" class="nav-link" style="display: none;">Logout</a>
-      </div>
+        <h1 style="margin-bottom: 20px;">Find Petrol Stations Near You</h1>
+        <div id="map"></div>
+        <div class="station-list" id="stationList"></div>
     </div>
-  </nav>
 
-  <div class="container">
-    <h1 style="margin-bottom: 20px;">Find Petrol Stations Near You</h1>
-    <div id="map"></div>
-    <div class="station-list" id="stationList">
-      
-      <!-- Add more stations as needed -->
-    </div>
-  </div>
+    <script>
+        function initMap() {
+            const stationListDiv = document.getElementById('stationList');
+            const mapDiv = document.getElementById('map');
+            let map;
 
-  <!-- Include your JavaScript file at the end -->
-  <script src="./JS/stations.js"></script>
-  <script>
-    // Function to update navbar based on token presence
-    function updateNavbar() {
-      const token = localStorage.getItem('token');
-      const logoutButton = document.getElementById('logoutButton');
+            // Get the user's current location
+            navigator.geolocation.getCurrentPosition(
+                position => {
+                    const userLat = position.coords.latitude;
+                    const userLng = position.coords.longitude;
 
-      if (token) {
-        // User is logged in
-        logoutButton.style.display = 'block'; // Show logout button
-      } else {
-        // User is not logged in
-        logoutButton.style.display = 'none'; // Hide logout button
-      }
-    }
+                    fetchStations(userLat, userLng);
+                },
+                error => {
+                    console.error('Error getting location', error);
+                    // Fallback location (New York)
+                    fetchStations(40.712776, -74.005974);
+                }
+            );
 
-    // Function to initialize the page
-    function initPage() {
-      // Update navbar on page load
-      updateNavbar();
+            async function fetchStations(userLat, userLng) {
+                try {
+                    const token = localStorage.getItem('token');
 
-      // Add event listener to logout button
-      const logoutButton = document.getElementById('logoutButton');
-      logoutButton.addEventListener('click', () => {
-        localStorage.removeItem('token'); // Remove token from localStorage
-        updateNavbar(); // Update navbar after logout
-        // Redirect to login page
-        window.location.href = './login.html'; // Adjust the URL as needed
-      });
-    }
+                    const response = await fetch(`http://localhost:3000/GetStations/allStations?userLat=${userLat}&userLng=${userLng}`, {
+                        method: 'GET',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'authorization': `Bearer ${token}`,
+                        },
+                    });
 
-    // Call initPage function when the page is loaded
-    document.addEventListener('DOMContentLoaded', () => {
-      initPage();
-    });
-  </script>
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch stations');
+                    }
 
-<script>
-  // Function to update navbar based on token presence
-  // Your existing JavaScript code here
+                    const data = await response.json();
+                    console.log('Fetched stations:', data);
+                    displayStations(data, userLat, userLng);
+                } catch (error) {
+                    console.error('Error fetching stations:', error);
+                    alert('Failed to fetch stations. Please try again later.');
+                }
+            }
 
-  // Function to check token and redirect to login if not present
-  function checkTokenAndRedirect() {
-    const token = localStorage.getItem('token');
-    if (!token) {
-      window.location.href = './login.html'; // Redirect to login page
-    }
-  }
+            function displayStations(stations, userLat, userLng) {
+                const center = stations.length ? { lat: stations[0].latitude, lng: stations[0].longitude } : { lat: 40.712776, lng: -74.005974 };
+                map = new google.maps.Map(mapDiv, {
+                    center: center,
+                    zoom: 12,
+                });
 
-  // Call checkTokenAndRedirect function when the page is loaded
-  document.addEventListener('DOMContentLoaded', () => {
-    // Your existing code here
-    checkTokenAndRedirect();
-  });
-</script>
+                const destinations = stations.map(station => new google.maps.LatLng(station.latitude, station.longitude));
+                const userLocation = new google.maps.LatLng(userLat, userLng);
+
+                const service = new google.maps.DistanceMatrixService();
+                const maxDestinations = 25;
+                const destinationChunks = [];
+
+                for (let i = 0; i < destinations.length; i += maxDestinations) {
+                    destinationChunks.push(destinations.slice(i, i + maxDestinations));
+                }
+
+                const results = [];
+
+                function processChunks(chunkIndex) {
+                    if (chunkIndex >= destinationChunks.length) {
+                        // All chunks processed
+                        results.forEach((chunkResults, chunkIndex) => {
+                            chunkResults.forEach((element, index) => {
+                                const stationIndex = chunkIndex * maxDestinations + index;
+                                const station = stations[stationIndex];
+                                if (element.status === 'OK') {
+                                    station.distance = element.distance.value / 1000; // Convert to kilometers
+                                    station.duration = element.duration.value / 60; // Convert to minutes
+                                } else {
+                                    station.distance = 'N/A';
+                                    station.duration = 'N/A';
+                                }
+                            });
+                        });
+
+                        // Sort stations by duration (travel time)
+                        stations.sort((a, b) => a.duration - b.duration);
+
+                        // Clear existing stations in the list
+                        stationListDiv.innerHTML = '';
+
+                        // Display sorted stations
+                        stations.forEach(station => {
+                            const marker = new google.maps.Marker({
+                                position: { lat: station.latitude, lng: station.longitude },
+                                map: map,
+                                title: station.name,
+                            });
+
+                            marker.addListener("click", () => {
+                                showStreetView(station);
+                            });
+
+                            const stationDiv = createStationElement(station);
+                            stationListDiv.appendChild(stationDiv);
+                        });
+
+                        return;
+                    }
+
+                    service.getDistanceMatrix(
+                        {
+                            origins: [userLocation],
+                            destinations: destinationChunks[chunkIndex],
+                            travelMode: 'DRIVING',
+                            unitSystem: google.maps.UnitSystem.METRIC,
+                        }, 
+                        (response, status) => {
+                            if (status !== 'OK') {
+                                console.error('Error with Distance Matrix:', status);
+                                return;
+                            }
+
+                            results.push(response.rows[0].elements);
+                            processChunks(chunkIndex + 1);
+                        }
+                    );
+                }
+
+                processChunks(0);
+            }
+
+            function createStationElement(station) {
+                const stationDiv = document.createElement('div');
+                stationDiv.classList.add('station');
+
+                stationDiv.innerHTML = `
+                    <h3>${station.name}</h3>
+                    <p>Address: ${station.address}</p>
+                    <p>Distance: ${station.distance !== 'N/A' ? station.distance.toFixed(2) : 'N/A'} km</p>
+                    <p>Travel Time: ${station.duration !== 'N/A' ? station.duration.toFixed(1) : 'N/A'} minutes</p>
+                    <p>Ratings: ${station.ratings}</p>
+                    <p>Fuel Price (Latest): ${station.latestFuelPrice}</p>
+                    <p>Diesel Price (Latest): ${station.latestDieselPrice}</p>
+                    <img src="${station.img}" alt="Station Image" style="max-width: 100%; height: auto;">
+                `;
+
+                stationDiv.addEventListener('click', () => {
+                    showStreetView(station);
+                });
+
+                return stationDiv;
+            }
+
+            function showStreetView(station) {
+                const panorama = new google.maps.StreetViewPanorama(mapDiv, {
+                    position: { lat: station.latitude, lng: station.longitude },
+                    pov: {
+                        heading: 0,
+                        pitch: 0
+                    },
+                    zoom: 1
+                });
+
+                map.setStreetView(panorama);
+            }
+
+            // Function to update navbar based on token presence
+            function updateNavbar() {
+                const token = localStorage.getItem('token');
+                const logoutButton = document.getElementById('logoutButton');
+
+                if (token) {
+                    // User is logged in
+                    logoutButton.style.display = 'block'; // Show logout button
+                } else {
+                    // User is not logged in
+                    logoutButton.style.display = 'none'; // Hide logout button
+                }
+            }
+
+            // Function to initialize the page
+            function initPage() {
+                // Update navbar on page load
+                updateNavbar();
+
+                // Add event listener to logout button
+                const logoutButton = document.getElementById('logoutButton');
+                logoutButton.addEventListener('click', () => {
+                    localStorage.removeItem('token'); // Remove token from localStorage
+                    updateNavbar(); // Update navbar after logout
+                    // Redirect to login page
+                    window.location.href = './login.html'; // Adjust the URL as needed
+                });
+            }
+
+            // Call initPage function when the page is loaded
+            document.addEventListener('DOMContentLoaded', () => {
+                // Add passive event listener to scroll
+                window.addEventListener('scroll', () => {
+                    // Your scroll event handler code here
+                }, { passive: true });
+
+                // Initialize the page
+                initPage();
+            });
+
+            // Function to check token and redirect to login if not present
+            function checkTokenAndRedirect() {
+                const token = localStorage.getItem('token');
+                if (!token) {
+                    window.location.href = './login.html'; // Redirect to login page
+                }
+            }
+
+            // Call checkTokenAndRedirect function when the page is loaded
+            document.addEventListener('DOMContentLoaded', () => {
+                checkTokenAndRedirect();
+            });
+        }
+    </script>
 </body>
 </html>
