--- a/frontend/pages/stations.html
+++ b/frontend/pages/stations.html
@@ -111,7 +111,7 @@
         }
 
         .station img {
-            width: 100%;
+            width: 50%;
             height: auto;
             border-radius: 10px;
             margin-bottom: 10px;
@@ -147,6 +147,19 @@
             transform: translateY(-5px);
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
+        #logoutButton {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#logoutButton:hover {
+    background-color: #c82333;
+}
     </style>
 </head>
 
